--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "jest": "^24.9.0",
     "postcss-modules": "^1.4.1",
     "prettier": "^1.18.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
     "semantic-release": "^15.13.27",
