--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/andrii-maglovanyi/react-ultimate-calendar.git"
+    "url": "git+https://github.com/andrii-maglovanyi/react-ultimate-calendar.git"
   },
   "keywords": [
     "component",
