--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ultimate-calendar",
-  "version": "2.0.0-alpha.8",
+  "version": "2.0.0",
   "description": "A lightweight calendar for React application.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
